# Calculate

./: CMakeLists.txt  calculator.h  main.cpp  readme.md  test.h
